--- a/MarsVPN/MarsVPNDebug.entitlements
+++ b/MarsVPN/MarsVPNDebug.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.warp.vpn1</string>
+		<string>group.com.start.vpn</string>
 	</array>
 </dict>
 </plist>
